Button branding label centered. Header padding top bug on tablet fixed.

--- a/app/scss/global/_buttons.scss
+++ b/app/scss/global/_buttons.scss
@@ -1,6 +1,5 @@
 .cta-btn{
-	// padding: 10px 14px 10px 24px;
-	padding: 0px 13px 0px 24px;
+	// padding: 0px 13px 0px 24px;
 	border-radius: 29px;
 	font-size: 1em;
 	line-height: 50px;
@@ -14,9 +13,9 @@
 	text-align: right;
 
 	@include laptop-sm-width {
-		padding-top: 4px;
-		padding-bottom: 5px;
-		padding-right: 15px;
+		// padding-top: 4px;
+		// padding-bottom: 5px;
+		// padding-right: 15px;
 		font-size: 1.2em;
 	}
 
@@ -25,8 +24,16 @@
 	}
 
 	a{
+		display: block;
 		text-decoration: none;
 		color: inherit;
+		padding: 0px 13px 0px 24px;
+
+		@include laptop-sm-width {
+			padding-top: 4px;
+			padding-bottom: 5px;
+			padding-right: 15px;
+		}
 	}
 
 	.apple{
@@ -51,7 +58,7 @@
 		letter-spacing: 0.01em;
 		&.short{
 			+ .arrow{
-				margin-left: 27px;
+				margin-left: 38px;
 			}
 		}
 	}
